fix grid with gap

--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -42,6 +42,7 @@
   max-width: 97%;
   margin: 0 auto;
   justify-content: space-evenly;
+  gap: 3rem 3rem;
 }
 
 .mazes_container p {
