--- a/src/pages/Search/Search.module.css
+++ b/src/pages/Search/Search.module.css
@@ -4,6 +4,7 @@
   max-width: 97%;
   margin: 0 auto;
   justify-content: space-evenly;
+  gap: 3rem 3rem;
 }
 
 .search_container {
